--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
-    "puppeteer": "^21.11.0"
+    "nodemon": "^3.1.9"
   }
 }
